# greentara-jobs

./: create_superuser.py  db.sqlite3  index.html  manage.py  pyproject.toml
greentara/: requirements.txt  settings.py  urls.py  wsgi.py
jobs/: admin.py  models.py  urls.py  views.py
jobs/management/commands/: createsuperuser_auto.py
jobs/migrations/: 0001_initial.py  0002_application_created_at_job_status_job_updated_at_and_more.py  0002_remove_application_updated_at_and_more.py  reset_migrations.py
templates/: admin.html  index-blue.html  index.html  login.html
